---------------------------------------------------------------------------------------------------
Version: 0.69.101
Date: ????
  Changes:
    - Weather particle effects added. With code/particles adapted from Varaxia's Celestial Weather mod.
---------------------------------------------------------------------------------------------------
Version: 0.69.100
Date: 2025-08-15
  Changes:
    - New main menu simulations!
---------------------------------------------------------------------------------------------------
Version: 0.69.99
Date: 2025-08-14
  Changes:
    - Crapapult speed nerf: void 245/s => 100/s. The net effect is: 1) Normal crapapult voids a nice round 100/s. 2) Voiding a stacked green belt now needs a legendary crapapult, as a normal crapapult will not be enough. Most users will not notice much difference.
    - Crapapult energy change: 1000kW => 800 kW. It also has more idle power drain (17 => 200 kW). Crapapult should spike your power grid a bit less than before, but generally cost more electricity to place one at all.
    - Crapapult now voids materials used for trigger techs just as fast as it voids anything else. This is a buff.
---------------------------------------------------------------------------------------------------
Version: 0.69.98
Date: 2025-08-12
  Changes:
    - More long term fix to the issues from 0.69.95-97 on stack overflow. There are now more safeguards in place to stop this from ever happenning again.
---------------------------------------------------------------------------------------------------
Version: 0.69.97
Date: 2025-08-11
  Changes:
    - Added emergency failsafe to the stack overflow bug.
---------------------------------------------------------------------------------------------------
Version: 0.69.96
Date: 2025-08-11
  Changes:
    - Shattered planet mod support:
      ► Crapapult can now be placed on the shattered planet.
      ► New cross tech for shattered planet.