@@ -72,12 +72,17 @@ data:extend({
 data_util.add_recipe_unlock("rubia-progression-stage2", "kr-rubia-oxygen")
 
 
-
-
 --Add mineral pump to spidertron corpse results
 local spider = data.raw["simple-entity"]["rubia-spidertron-remnants"].minable.results
 table.insert(spider, 5,
     {type = "item", name = "kr-mineral-water-pumpjack", probability=0.4, amount_min = 1, amount_max = 3})
+
+--BZ Tin adds solder to fuel refineries.
+if mods["bztin"] then 
+    local scrapapalooza = data.raw["recipe"]["biorecycle-scrapapalooza"].results
+    table.insert(scrapapalooza, {type = "item", name = "kr-fuel-refinery", amount = 1, probability = 0.05})
+    rubia_lib.compat.try_add_prerequisite("craptonite-processing","rubia-scrapapalooza")
+end
 
 ---We can't make steel without coke.
 --Need a recipe to make coke.
