@@ -3,6 +3,7 @@ Version: 0.69.101
 Date: ????
   Changes:
     - Weather particle effects added. With code/particles adapted from Varaxia's Celestial Weather mod.
+    - Added compat for Krastorio 2 spaced out when BZ Tin is installed at the same time. (Why are you people installing multiple overhauls at once!?)
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.100
 Date: 2025-08-15
